fix(side-menu.component.scss): fix z-index

--- a/library-web-frontend/src/app/side-menu/side-menu.component.scss
+++ b/library-web-frontend/src/app/side-menu/side-menu.component.scss
@@ -2,6 +2,8 @@
 
 :host {
     position: fixed;
+    z-index: 1;
+
     .side-menu {
         display: flex;
         flex-direction: column;
